[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Global.gd" type="Script" id=1]
[ext_resource path="res://Sound/MenuPress.wav" type="AudioStream" id=2]
[ext_resource path="res://Sound/MenuSelect.wav" type="AudioStream" id=3]
[ext_resource path="res://Sound/WaveStart.wav" type="AudioStream" id=4]
[ext_resource path="res://Sound/WaveEnd.wav" type="AudioStream" id=5]

[node name="GlobalScene" type="Node2D"]
script = ExtResource( 1 )

[node name="OSTPlayer" type="AudioStreamPlayer" parent="."]
bus = "OST"

[node name="MenuSelect" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "SFX"

[node name="MenuPress" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
bus = "SFX"

[node name="WaveStart" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -6.0
bus = "SFX"

[node name="WaveEnd" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -6.0
bus = "SFX"
